Added jvmFlags to limit memory and avoid terminating Docker by Google.